# redes1

hamming/: coder.py  hamming.py  hamming_decoded.txt  hamming_encoded.txt  teste.txt
raw-socket/: CMakeLists.txt  ConexaoRawSocket.c  Dockerfile  Dockerfile-slave  common.c  common.h  crc.c  crc.h  crs.h  debug.c  define.h  docker-compose.yml  main.c  makefile  master  master.c  master.h  messenger.c  messenger.h  my-test  parser.c  parser.h  run.sh  slave  slave.c  slave.h  teste  teste.c  tmp.c
trab1/: ConexaoRawSocket.c  crs.h  main.h  makefile  master.c  slave.c
